--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <meta name="author" content="Matheus Ramalho">
         <meta name="copyright" content="Matheus Ramalho">
 
-        <title> Jogo da velha </title>
+        <title> Jogo da velha App </title>
 
-        <!-- STYLES... -->
-        <link type="image/png" rel="shortcut icon" href="">
-        <link type="text/css" rel="stylesheet" href="assets/css/style.css">
+        <!-- CSS... -->
+        <link type="image/png" rel="shortcut icon" href="assets/images/favicon.png">
+        <link type="text/css" rel="stylesheet" href="assets/css/app.css">
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;500;700&display=swap">
@@ -59,11 +60,10 @@
         </main>
 
         <footer class="footer__">
-            <span class="copyright__"> &copy; Matheus Ramalho. Todos os direitos reservados. </span>
             <a href="https://matheusramalho.dev"> matheusramalho.dev </a>
         </footer>
 
-        <!-- JAVASCRIPT... -->
-        <script type="module" src="src/js/script.js"></script>
+        <!-- JS... -->
+        <script type="module" src="src/js/app.js"></script>
     </body>
 </html>
